<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoregistro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nuevoJugador"
        android:id="@+id/textView4"
        android:layout_gravity="center"
        android:textSize="25dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:weightSum="7">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/guerrero"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:id="@+id/imageView2"
            android:background="@drawable/mago"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:id="@+id/imageView3"
            android:background="@drawable/picaro"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guerrero"
                android:id="@+id/checkGuerrero"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:textColor="#000000"
                android:textSize="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mago"
                android:id="@+id/checkMago"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="20dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picaro"
                android:id="@+id/checkPicaro"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:textColor="#000000"
                android:textSize="20dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNuevoUsuario"
        android:gravity="center"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:id="@+id/textView5"
        android:gravity="center"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNuevaContraseña"
        android:gravity="center"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/btnNuevoUsuario"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/check"/>
    </RelativeLayout>

</LinearLayout>