<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondocombate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_gravity="left"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imagenEnemigo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/nombreEnemigo"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vida"
                    android:id="@+id/textView18"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vida"
                    android:id="@+id/textView25"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView26"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energia"
                    android:id="@+id/textView27"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView28"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:textSize="22dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/imagenJugador" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/versus"
        android:id="@+id/textView24"
        android:layout_gravity="center"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btnAtacar"
                android:background="@drawable/atacar"
                android:layout_margin="20dp"
                android:backgroundTint="#d30303" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btnEspecial"
                android:background="@drawable/especial"
                android:layout_margin="20dp"
                android:backgroundTint="#458ff9" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btnHuir"
                android:background="@drawable/escapar"
                android:backgroundTint="#ffd500"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>